# ex3

./: .gitignore  BinaryStringHash.cpp  Bmp.cpp  Bmp.hpp  BmpCacheOperations.cpp  CMakeLists.txt  CacheOperations.hpp  ErrorCode.h  Matrix.cpp  Matrix.hpp  MatrixCacheOperations.cpp  MatrixErrorCode.cpp  MatrixErrorCode.hpp  README.md  bmp_tester.cpp  bmp_tester.hpp  crc32.c  details.txt  file_reading.cpp  main.cpp
Cache/: CMakeLists.txt  CacheManagement.cpp  CacheManagement.hpp  CacheOperationFactory.cpp  CacheOperationFactory.hpp  Factory.cpp  Factory.hpp  FileReading.cpp  FileReading.hpp
src/: CMakeLists.txt  Main.cpp
src/Bmp/: Bmp.cpp  Bmp.h  Bmp.hpp  bmp_tester.cpp
src/CacheManagement/: CacheManagement.cpp  CacheManagement.h  CacheManagement.hpp
src/CacheOperations/: BinaryStringHash.cpp  BmpCacheOperations.cpp  CacheOperationFactory.cpp  CacheOperationFactory.h  CacheOperationFactory.hpp  CacheOperations.h  CacheOperations.hpp  MatrixCacheOperations.cpp
src/Hash/: crc32.c
src/Matrix/: Matrix.cpp  Matrix.hpp
src/fileReading/: file_reading.cpp  file_reading.hpp
